// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render a default selector appropriately 1`] = `<withProps(Styled(div)) />`;

exports[`Selector should render a disabled selector appropriately 1`] = `
<withProps(Styled(div))
  disabled={true}
/>
`;

exports[`Selector should render a selected selector appropriately 1`] = `
<withProps(Styled(div))
  selected={true}
/>
`;
